# tnfsd

./: .gitignore  CMakeLists.txt  README.md
py/: gen_stats.py
release/: TnfsTrayApp-Installer.iss  deploy_linux.sh  deploy_mac.sh  deploy_pi.sh  deploy_win.ps1  tnfstrayapp-1.0.0-Linux.deb
res/: Info.plist.in  resources.qrc  tnfs_badge.icns  windows.rc
src/: aboutdialog.cpp  aboutdialog.h  datagram.c  logwindow.cpp  logwindow.h  main.c  main.cpp  settingsdialog.cpp  settingsdialog.h  statswindow.cpp  statswindow.h  tnfsworker.cpp  tnfsworker.h  traymanager.cpp  traymanager.h
src/tnfsd/: datagram.c  datagram.h  directory.c  fileinfo.c  log.c  log.h  main.c  session.c  tnfs.h  tnfs_file.c
